--- a/index.html
+++ b/index.html
@@ -5,11 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee&family=Homemade+Apple&display=swap"
+      rel="stylesheet"
+    />
     <title>Static Template</title>
   </head>
   <body>
     <div class="container">
-      <div class="frame"></div>
+      <div class="frame">
+        <section class="header">
+          <button class="header-btn">Add</button>
+          <h1 class="header-tittle">Todo List</h1>
+          <button class="header-btn main-red-color">Clear</button>
+        </section>
+
+        <section class="add">
+          <form class="add-form">
+            <input type="text" class="add-input" />
+            <button class="add-btn">Add</button>
+          </form>
+        </section>
+      </div>
     </div>
   </body>
 </html>
